// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Templates/Post Should render correctly 1`] = `
<div>
  <header>
    Header
  </header>
  <main
    class="post-content__wrapper"
  >
    <article
      class="post-content__article"
    >
      <h1
        class="post-content__title"
      >
        Luke is comming! :D
      </h1>
      <p
        class="post-content__date"
      >
        <small>
          Postado em
          : 
          29/06/2022
        </small>
      </p>
      <figure
        class="post-content__article-image-wrapper"
      >
        <img
          alt="Luke is comming! :D"
          class="post-content__article-image"
          data-nimg="fill"
          decoding="async"
          sizes="100vw"
          src="/_next/image?url=%2Fimg%2Fbg.jpg&w=3840&q=75"
          srcset="/_next/image?url=%2Fimg%2Fbg.jpg&w=640&q=75 640w, /_next/image?url=%2Fimg%2Fbg.jpg&w=750&q=75 750w, /_next/image?url=%2Fimg%2Fbg.jpg&w=828&q=75 828w, /_next/image?url=%2Fimg%2Fbg.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimg%2Fbg.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimg%2Fbg.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimg%2Fbg.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimg%2Fbg.jpg&w=3840&q=75 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </figure>
      <p>
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente fugit numquam tempora voluptatum voluptas in, doloremque maiores natus cum voluptate culpa perferendis ipsam pariatur unde optio id amet dolorum inventore.
      </p>
    </article>
    <a
      href="/blog"
    >
      <span
        class="post-content__back"
      >
        Ver todos os posts
      </span>
    </a>
  </main>
</div>
`;

exports[`Templates/Post Should render correctly in en 1`] = `
<div>
  <header>
    Header
  </header>
  <main
    class="post-content__wrapper"
  >
    <article
      class="post-content__article"
    >
      <h1
        class="post-content__title"
      >
        Luke is comming! :D
      </h1>
      <p
        class="post-content__date"
      >
        <small>
          Posted at
          : 
          06/29/2022
        </small>
      </p>
      <figure
        class="post-content__article-image-wrapper"
      >
        <img
          alt="Luke is comming! :D"
          class="post-content__article-image"
          data-nimg="fill"
          decoding="async"
          sizes="100vw"
          src="/_next/image?url=%2Fimg%2Fbg.jpg&w=3840&q=75"
          srcset="/_next/image?url=%2Fimg%2Fbg.jpg&w=640&q=75 640w, /_next/image?url=%2Fimg%2Fbg.jpg&w=750&q=75 750w, /_next/image?url=%2Fimg%2Fbg.jpg&w=828&q=75 828w, /_next/image?url=%2Fimg%2Fbg.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimg%2Fbg.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimg%2Fbg.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimg%2Fbg.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimg%2Fbg.jpg&w=3840&q=75 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </figure>
      <p>
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente fugit numquam tempora voluptatum voluptas in, doloremque maiores natus cum voluptate culpa perferendis ipsam pariatur unde optio id amet dolorum inventore.
      </p>
    </article>
    <a
      href="/blog"
    >
      <span
        class="post-content__back"
      >
        See all posts
      </span>
    </a>
  </main>
</div>
`;
